--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
   "name": "ember-cli-numeral",
   "version": "0.1.2",
-  "description": "ember-cli addon support for Numeral.js",
+  "description": "ES6 accessible module for Numeral.js within your Ember applications.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ember build",
+    "start": "ember server",
+    "test": "ember try:each"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jayphelps/ember-cli-numeral.git"
-  },
+  "repository": "http://github.com/josemarluedke/ember-cli-numeral",
   "keywords": [
     "ember-addon"
   ],
-  "author": "Jay Phelps <hello@jayphelps.com>",
+  "author": "Jay Phelps <hello@jayphelps.com>; Josemar Luedke <josemarluedke@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jayphelps/ember-cli-numeral/issues"
-  },
-  "homepage": "https://github.com/jayphelps/ember-cli-numeral",
+  "homepage": "https://github.com/josemarluedke/ember-cli-numeral",
   "dependencies": {
     "ember-cli-node-assets": "^0.1.4",
     "numeral": "^1.5.3"
+  },
+  "devDependencies": {
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli": "2.10.0-beta.2",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-htmlbars": "^1.0.10",
+    "ember-cli-jshint": "^2.0.1",
+    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-test-loader": "^1.1.0",
+    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-load-initializers": "^0.5.1",
+    "ember-resolver": "^2.0.3",
+    "loader.js": "^4.0.10"
+  },
+  "engines": {
+    "node": ">= 0.12.0"
+  },
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
   }
 }
