--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
   - npm install -g yarn
   - yarn global add bower
   - bower --version
-  - yarn install phantomjs-prebuilt
+  - yarn add phantomjs-prebuilt
   - node_modules/phantomjs-prebuilt/bin/phantomjs --version
 
 install:
