--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "license": "MIT",
   "homepage": "https://github.com/josemarluedke/ember-cli-numeral",
   "dependencies": {
-    "ember-cli-node-assets": "^0.1.4",
-    "numeral": "^1.5.3"
+    "broccoli-funnel": "^1.0.0",
+    "numeral": "2.0.4"
   },
   "devDependencies": {
+    "ember-cli": "~2.10.0",
     "ember-cli-babel": "^5.1.7",
-    "ember-cli": "2.10.0-beta.2",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-jshint": "^2.0.1",
