--- a/package.json
+++ b/package.json
@@ -2,38 +2,48 @@
   "name": "ember-cli-numeral",
   "version": "0.2.0",
   "description": "ES6 accessible module for Numeral.js within your Ember applications.",
-  "main": "index.js",
+  "keywords": [
+    "ember-addon"
+  ],
+  "license": "MIT",
+  "author": "Jay Phelps <hello@jayphelps.com>; Josemar Luedke <josemarluedke@gmail.com>",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "repository": "http://github.com/josemarluedke/ember-cli-numeral",
+  "homepage": "https://github.com/josemarluedke/ember-cli-numeral",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each"
   },
-  "repository": "http://github.com/josemarluedke/ember-cli-numeral",
-  "keywords": [
-    "ember-addon"
-  ],
-  "author": "Jay Phelps <hello@jayphelps.com>; Josemar Luedke <josemarluedke@gmail.com>",
-  "license": "MIT",
-  "homepage": "https://github.com/josemarluedke/ember-cli-numeral",
   "dependencies": {
-    "broccoli-funnel": "^1.0.0",
-    "numeral": "2.0.4"
+    "ember-cli-babel": "^6.6.0",
+    "numeral": "2.0.6"
   },
   "devDependencies": {
-    "ember-cli": "~2.10.0",
-    "ember-cli-babel": "^5.1.7",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.0.10",
-    "ember-cli-jshint": "^2.0.1",
-    "ember-cli-qunit": "^3.0.1",
-    "ember-cli-test-loader": "^1.1.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.10"
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "~2.16.2",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-shims": "^1.1.0",
+    "ember-cli-sri": "^2.1.0",
+    "ember-cli-uglify": "^2.0.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.16.0",
+    "loader.js": "^4.2.3"
   },
   "engines": {
-    "node": ">= 0.12.0"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
